client/src/components/AlbumCard/AlbumCard.css
.albumCard {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 180px;
  height: 265px;
  background-color: #181818;
  border-radius: 10px;
  padding: 1rem;
  position: relative;
}

.albumCard:hover {
  background-color: #2d2d2d;
  cursor: pointer;
}

.albumCard img {
  width: 150px;
  height: 150px;
  border-radius: 10px;
  margin-top: -0.5rem;
}

.albumCard__trackInfo {
  display: flex;
  flex-direction: column;
  width: 150px;
  height: 50px;
  margin-top: 1rem;
  gap: 0.7rem;
}

.albumCard__trackInfo h4 {
  color: white;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.albumCard__trackInfo h5 {
  color: var(--color-gray);
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.albumCard__trackInfo h5:hover {
  text-decoration: underline;
}

.albumCard:hover .albumCard-playButton {
  visibility: visible;
}

.albumCard-playButton {
  position: absolute;
  color: var(--color-green);
  font-size: 45px;
  margin-top: 1rem;
  right: 22px;
  visibility: hidden;
}

.albumCard-playButton:hover {
  font-size: 48px;
}

